[gd_scene load_steps=4 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]

[sub_resource type="CapsuleMesh" id=1]

[sub_resource type="CapsuleShape" id=2]

[node name="Player" type="RigidBody"]
gravity_scale = 0.0
linear_damp = 0.0
angular_damp = 0.0
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
mesh = SubResource( 1 )
material/0 = null

[node name="EnginePanel" type="Panel" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -175.0
margin_top = -275.0
margin_right = -25.0
margin_bottom = -25.0

[node name="XThrust" type="VSlider" parent="EnginePanel"]
margin_left = 17.0
margin_top = 8.0
margin_bottom = 98.0
min_value = -100.0

[node name="YThrust" type="VSlider" parent="EnginePanel"]
margin_left = 67.0
margin_top = 8.0
margin_bottom = 98.0
min_value = -100.0

[node name="ZThrust" type="VSlider" parent="EnginePanel"]
margin_left = 117.0
margin_top = 8.0
margin_bottom = 98.0
min_value = -100.0

[node name="XRot" type="VSlider" parent="EnginePanel"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 17.0
margin_top = -114.0
margin_bottom = -24.0
min_value = -100.0
editable = false

[node name="YRot" type="VSlider" parent="EnginePanel"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 67.0
margin_top = -114.0
margin_bottom = -24.0
min_value = -100.0
editable = false

[node name="ZRot" type="VSlider" parent="EnginePanel"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 117.0
margin_top = -113.0
margin_bottom = -24.0
min_value = -100.0
editable = false

[node name="ThrustType" type="CheckButton" parent="EnginePanel"]
margin_left = -9.0
margin_top = 98.8807
margin_right = 161.0
margin_bottom = 138.881
text = "Vernier Thrust"

[node name="MainPanel" type="Panel" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -225.0
margin_top = 30.0
margin_right = 225.0
margin_bottom = 80.0

[node name="Time" type="HSlider" parent="MainPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -254.0
margin_bottom = -10.0
step = 0.01

[node name="PlayButton" type="Button" parent="MainPanel"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -237.923
margin_top = 10.0
margin_right = -199.923
margin_bottom = -10.0
text = "Play"

[node name="UploadButton" type="Button" parent="MainPanel"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -198.503
margin_top = 10.0
margin_right = -141.503
margin_bottom = -10.0
text = "Upload"

[node name="ResetButton" type="Button" parent="MainPanel"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -59.5206
margin_top = 10.0
margin_right = -11.5206
margin_bottom = -10.0
text = "Reset"

[node name="AddButton" type="Button" parent="MainPanel"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -140.506
margin_top = 10.0
margin_right = -103.506
margin_bottom = -9.99999
text = "Add"

[node name="BackButton" type="Button" parent="MainPanel"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -102.596
margin_top = 10.0
margin_right = -60.5958
margin_bottom = -10.0
text = "Back"

[node name="Timer" type="Timer" parent="."]
process_mode = 0
one_shot = true

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 2 )
[connection signal="value_changed" from="EnginePanel/XThrust" to="." method="_on_XThrust_changed"]
[connection signal="value_changed" from="EnginePanel/YThrust" to="." method="_on_YThrust_changed"]
[connection signal="value_changed" from="EnginePanel/ZThrust" to="." method="_on_ZThrust_changed"]
[connection signal="value_changed" from="EnginePanel/XRot" to="." method="_on_XRot_changed"]
[connection signal="value_changed" from="EnginePanel/YRot" to="." method="_on_YRot_changed"]
[connection signal="value_changed" from="EnginePanel/ZRot" to="." method="_on_ZRot_changed"]
[connection signal="toggled" from="EnginePanel/ThrustType" to="." method="_on_ThrustType_toggled"]
[connection signal="value_changed" from="MainPanel/Time" to="." method="_on_Time_changed"]
[connection signal="pressed" from="MainPanel/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="MainPanel/UploadButton" to="." method="_on_UploadButton_pressed"]
[connection signal="pressed" from="MainPanel/ResetButton" to="." method="_on_ResetButton_pressed"]
[connection signal="pressed" from="MainPanel/AddButton" to="." method="_on_AddButton_pressed"]
[connection signal="pressed" from="MainPanel/BackButton" to="." method="_on_BackButton_pressed"]
